--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,13 @@
 body {
     font-family:"Hiragino Kaku Gothic ProN","メイリオ";
 }
+
+.btn{
+    font-size:1.00rem;
+    line-height:1.5;
+    border-radius:3rem;
+}
+
+.btn a{
+    color:#fff;
+}
