軽微な修正・css追加

--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,9 @@
-body {
+/* body {
     font-family:"Hiragino Kaku Gothic ProN","メイリオ";
+} */
+
+.btn {
+    font-family:"Press Start 2P";
 }
 
 .btn{
